# Qt_FixedApp

./: .gitignore  CMakeLists.txt  README.md  app_config.json  todo.md
cmake/macos/: Info.plist.in
resources/: resources.qrc
src/: main.cpp
src/tools/diy_audio/: diy_audio.cpp  diy_audio.h
src/tools/diy_bl/: diy_bl.cpp  diy_bl.h
src/tools/diy_database/: patient_database.cpp  patient_database.h  user_database.cpp  user_database.h
src/tools/diy_encryption/: diy_encryption.cpp  diy_encryption.h
src/tools/diy_oscilloscope-plot/: diy_oscilloscope-plot.cpp  diy_oscilloscope-plot.h
src/tools/diy_playback-plot/: diy_playback-plot.cpp  diy_playback-plot.h
src/tools/diy_serial/: diy_serial.cpp  diy_serial.h
src/tools/diy_signal-analysis/: diy_signal-analysis.cpp  diy_signal-analysis.h
src/tools/diy_signal-data/: diy_signal-data.h
src/tools/diy_start-test/: diy_start-test.cpp  diy_start-test.h
src/tools/diy_ui_toast-notification/: diy_ui_toast-notification.cpp  diy_ui_toast-notification.h
src/ui/: manager_of_ui.cpp  manager_of_ui.h
src/ui/login_dialog/: login_dialog.cpp  login_dialog.h  login_dialog.ui
src/ui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/mainwindow/bl_ui/: mainwindow_bl.cpp  mainwindow_bl.h  mainwindow_bl.ui
src/ui/mainwindow/bottom_menu/: mainwindow_bottom_menu.cpp  mainwindow_bottom_menu.h  mainwindow_bottom_menu.ui
src/ui/mainwindow/serial_ui/: mainwindow_serial.cpp  mainwindow_serial.h  mainwindow_serial.ui
src/ui/mainwindow/settings_ui/: mainwindow_settings.cpp  mainwindow_settings.h  mainwindow_settings.ui
src/ui/mainwindow_addpatient/: mainwindow_addpatient.cpp  mainwindow_addpatient.h  mainwindow_addpatient.ui
src/ui/mainwindow_playbackdata/: mainwindow_playbackdata.cpp  mainwindow_playbackdata.h  mainwindow_playbackdata.ui
src/ui/mainwindow_searchpatient/: mainwindow_searchpatient.cpp  mainwindow_searchpatient.h  mainwindow_searchpatient.ui
